
v0.9.4

    * Added esky.util.appexe_from_executable, a convenience method to
      find the bootstrapping exe corresponding to the running program.


v0.9.3

    * Preliminary support for a "callback" argument to Esky.auto_update,
      which is called with a dict of status info as update progresses.
    * esky.patch:  preserve file mode when patching a file.
    * DefaultVersionFinder.open_url: ensure that f.size is always an int.


v0.9.2

    * Restore compatability with python2.5, via __future__ imports.
    * esky.winres:  use ctypes.WinError throughout, to make inlining of
      code from this module more reliable.


v0.9.1

    * Fix some build issues on OSX:
        * varname typo in f_py2app.
        * undo py2app's changes to env["MACOSX_DEPLOYMENT_TARGET"] after
          it has finished its work.
        * don't let get_platform() change its value due to changes in the
          build environment; if it does the build files get corrupted.
        * correctly handle dots etc in sys.executable
    * Fix some built issues on win32:
        * the py2exe custom chainloader tried to use 'nt' module before
          it was imported, giving an UnboundLocalError.


v0.9.0

  THIS RELEASE INTRODUCES A NEW ON-DISK FILE LAYOUT - SEE BELOW FOR NOTES

    * Move the version directories, updates directory etc into an "appdata"
      subdirectory, to avoid user confusion in the top-level directory. The
      hope is that users will be much less inclined to poke around inside a
      generic "appdata" directory than inside directories named after the app.
         * to be clear, the new layout looks like this:
               myapp.exe
               appdata/
                 myapp-X.Y.X.win32/
                   myapp.exe
                   esky-files/
                 updates/
         * the "bdist_esky" command still generates zipfiles using the old 
           layout, so they can be unpacked correctly by previous versions of